Bug 596222 - Crash [@ mozilla::widget::WindowHook::Lookup] on shutdown with MaxTo enabled. r=robarnold